renskriving. Ellers veldig bra!.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							The receipt is your guarantee to get a new commodity or your money back. But it requires you not only to take it with you from the store, but also to take care of it. This can be impractical and bad for the environment as well.
 						</p>
 						<p tabindex="0" >
-							With today’s technology this should be a problem of the past?
+							We think that ith today’s technology this should be a problem of the past!
 						</p>
 					</div>
 				</div>
@@ -91,13 +91,13 @@
 					<div class="inner" >
 						<h2 tabindex="0" >Our product</h2>
 						<p tabindex="0" >
-							We sat down to discuss the possibilitis to solve this problem and came up with a product. <strong>KvitteringsBasen</strong> (the ReceiptBase). A mobile application with the goal of replace paper based receipts.
+							We sat down to discuss the possibilitis to solve this problem and came up with a product: <strong>KvitteringsBasen</strong> (the ReceiptBase). A mobile application that aims to replace paper based receipts.
 						</p>
 						<p tabindex="0" >
-							The idea is simple; by register as a user and apply you visa to your app the receipts will be stored in a sky-based database and viewed in the app. With this solution more possibilities become available. For example, make an overview over money spent, what it is spent on and where it is spent.
+							The idea is simple; by registering as a user and adding your visa to the app, the receipts will be stored in a sky-based database and viewed in the app. With this solution more possibilities become available. For example, make an overview over money spent, what it is spent on and where it is spent.
 						</p>
 						<p tabindex="0" >
-							The plan isn’t to replace paper completely overnight. More to decrease the paper usage with about 80%. Paper must be a option for people that are paying in cash. Paper receipts should contain QR-codes so you can manually collect them yourself if you want it digital. This leaves people with opportunity to choose for themselves.
+							The plan isn’t to replace paper completely overnight. More to decrease the paper usage with about 80%. Paper must be a option for people that are paying in cash. Paper receipts should contain QR-codes so you can manually collect them yourself if you want it digital. This leaves people with the opportunity to choose for themselves.
 						</p>
 
 					</div>
