skriveleif i skriveleif-rettinga.wops......

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							The receipt is your guarantee to get a new commodity or your money back. But it requires you not only to take it with you from the store, but also to take care of it. This can be impractical and bad for the environment as well.
 						</p>
 						<p tabindex="0" >
-							We think that ith today’s technology this should be a problem of the past!
+							We think that with today’s technology this should be a problem of the past!
 						</p>
 					</div>
 				</div>
